[gd_scene load_steps=2 format=2]
[ext_resource path="res://scripts/CharacterCreation.gd" type="Script" id=1]

[node name="CharacterCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 100.0
text = "Create Your Character"
align = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="NameLabel" type="Label" parent="."]
margin_top = 150.0
margin_left = 200.0
margin_right = 400.0
margin_bottom = 180.0
text = "Name:"
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="NameLineEdit" type="LineEdit" parent="."]
margin_top = 180.0
margin_left = 200.0
margin_right = 600.0
margin_bottom = 220.0
placeholder_text = "Enter your name"

[node name="BackgroundLabel" type="Label" parent="."]
margin_top = 240.0
margin_left = 200.0
margin_right = 400.0
margin_bottom = 270.0
text = "Background:"
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="BackgroundOption" type="OptionButton" parent="."]
margin_top = 270.0
margin_left = 200.0
margin_right = 600.0
margin_bottom = 310.0
text = "Select..."

[node name="CreateButton" type="Button" parent="."]
margin_top = 350.0
margin_left = 350.0
margin_right = 650.0
margin_bottom = 400.0
text = "Create Profile"

